--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="pagina de memes proyecto base de inacap para explorar html y css junto con mongo db" content="">
+    <link rel="stylesheet" href="../css/index.css">
     <title>Inacap Memes</title>
 </head>
 <body> 
     <header>
         <div class="logo-container">
-            <img class="logo" src="logo.jpg" alt="LOGO">
+            <img class="logo" src="../img/logo.jpg" alt="LOGO">
         </div>
        
     
