cambio en el html para el efecto

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -7,21 +7,22 @@
     <link rel="stylesheet" href="../css/index.css">
     <title>Inacap Memes</title>
 </head>
-<body> 
+<body>
     <header>
-        <div class="logo-container">
-            <img class="logo" src="../img/logo.jpg" alt="LOGO">
+        <!-- El logo será una imagen inicialmente -->
+        <div id="logo">
+            <img src="logo.png" alt="Logo" id="logo-img">
+            <span id="logo-text" style="display: none;">Mi Web de Memes</span>
         </div>
+    </header>
 
     <div style="height: 1500px;"> <!-- Espacio para scroll -->
         <h1>Bienvenidos a la web de memes</h1>
         <p>Desplázate hacia abajo para ver el efecto en el logo.</p>
     </div>
+
     <script src="script.js"></script>
 </body>
-</html>
 
-</header>
-</body>
-</body>
+
 </html>
